# starplan-hackathon

./: README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
agents/: contract_checker_agent.py  convert_document.py  eoi_extraction_agent.py  master_agent.py  search_vs.py  server.py  signing_agent.py  sla_agent.py  sla_cronjob.py  test.py  vendor.py  vendor_details.json  void_agent.py
agents/deadlines/: Fake Rise VIC 3336.json  Fake Set VIC 3336.json
mail_monitoring/: azure_app_setup.md  convert_document.py  login_app.py  ngrok_setup.md  readme.md  webhook.py
setup/: create_vectorstore.py
