[project]
name = "starplan-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "authlib>=1.6.5",
    "cachetools>=6.2.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langchain>=1.1.3",
    "langchain-openai>=1.1.1",
    "langgraph>=1.0.4",
    "loadenv>=0.1.1",
    "openai>=2.9.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]
